# database-configurations

./: README.md  pyproject.toml
database_sql/: traceit_mainsystem_createtable.sql  traceit_research_createtable.sql
django_configurations/: mainsystem_models.py  research_models.py
main/: models.py
main/migrations/: 0001_initial.py
researchs/migrations/: 0001_initial.py
roles_management/: setup_db_roles.py
sampledata/: generate.py  generate_relations.sql
traceitdb/: settings.py
traceitdb/traceitdb/: settings.py
